changed program on netsci page
changed program on netsci page

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5821,7 +5821,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-29T17:56:10Z</date>
+						<date>2018-05-31T19:52:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5990,11 +5990,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								it7VlZ9q27JI
-								eHW0QWBpRg==
+								ZvJ6XNz3aQpB
+								xIp9ZuDjfA==
 								</data>
 								<key>Size</key>
-								<integer>47086</integer>
+								<integer>47080</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
