--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-29T17:56:10Z</date>
+						<date>2018-05-31T19:52:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -202,11 +202,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								it7VlZ9q27JI
-								eHW0QWBpRg==
+								ZvJ6XNz3aQpB
+								xIp9ZuDjfA==
 								</data>
 								<key>Size</key>
-								<integer>47086</integer>
+								<integer>47080</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
