--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4445,7 +4445,7 @@
 					<key>page47 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-21T20:45:09Z</date>
+						<date>2018-06-05T16:00:01Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4694,11 +4694,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GqsRcRwLHRgg
-								SR27CDXhwA==
+								ScxXMyObUjIs
+								uY2qICE9qQ==
 								</data>
 								<key>Size</key>
-								<integer>88929</integer>
+								<integer>89086</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
