--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3111,7 +3111,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-29T18:27:15Z</date>
+						<date>2018-06-09T10:00:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3410,11 +3410,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t+La/IbL8p/X
-								yWH5vnfbQg==
+								eEdMIfT2tVP9
+								upQRE12WOQ==
 								</data>
 								<key>Size</key>
-								<integer>57228</integer>
+								<integer>57249</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5067,7 +5067,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-29T18:27:15Z</date>
+						<date>2018-06-09T10:00:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5496,11 +5496,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7d0BGTvjxTqL
-								kFPBgjEklA==
+								kb+zO6t2imh2
+								2R/VR4/fcg==
 								</data>
 								<key>Size</key>
-								<integer>103978</integer>
+								<integer>103999</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
