--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-29T18:27:15Z</date>
+						<date>2018-06-09T10:00:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -462,11 +462,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7d0BGTvjxTqL
-								kFPBgjEklA==
+								kb+zO6t2imh2
+								2R/VR4/fcg==
 								</data>
 								<key>Size</key>
-								<integer>103978</integer>
+								<integer>103999</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
