--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-29T18:27:15Z</date>
+						<date>2018-06-09T10:00:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -332,11 +332,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t+La/IbL8p/X
-								yWH5vnfbQg==
+								eEdMIfT2tVP9
+								upQRE12WOQ==
 								</data>
 								<key>Size</key>
-								<integer>57228</integer>
+								<integer>57249</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
