NetSci website updates
NetSci website updates

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5705,7 +5705,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-29T17:56:10Z</date>
+						<date>2018-06-09T12:23:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5739,6 +5739,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-248de64-1200x776.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9bJ5af31ToLq
+								s071AM1Pvg==
+								</data>
+								<key>Size</key>
+								<integer>297644</integer>
+							</dict>
+							<key>files/stacks-image-3bd846c-1200x636.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7Tdr9WgJR/uS
+								BovdBArFyQ==
+								</data>
+								<key>Size</key>
+								<integer>295684</integer>
 							</dict>
 							<key>files/stacks-image-62d32bc-962x550.jpg</key>
 							<dict>
@@ -5774,11 +5794,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Prgd+clsHiw8
-								IkjDm3J0zQ==
+								59pE3w5u2ElZ
+								tEIr5Vjefg==
 								</data>
 								<key>Size</key>
-								<integer>111501</integer>
+								<integer>112675</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -5804,11 +5824,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+DgQKb64G4Qj
-								kkdFSWHYNg==
+								7oSR5nfNkjqs
+								wwak+JNE1g==
 								</data>
 								<key>Size</key>
-								<integer>49487</integer>
+								<integer>54937</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5821,7 +5841,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-31T19:52:47Z</date>
+						<date>2018-06-09T12:23:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5886,6 +5906,26 @@
 								<key>Size</key>
 								<integer>307683</integer>
 							</dict>
+							<key>files/stacks-image-248de64-1200x776.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9bJ5af31ToLq
+								s071AM1Pvg==
+								</data>
+								<key>Size</key>
+								<integer>297644</integer>
+							</dict>
+							<key>files/stacks-image-69ebcea.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wcQWJYoOe1An
+								41Iye9rWOQ==
+								</data>
+								<key>Size</key>
+								<integer>146527</integer>
+							</dict>
 							<key>files/stacks-image-902084e-166x250.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -5916,6 +5956,16 @@
 								<key>Size</key>
 								<integer>228758</integer>
 							</dict>
+							<key>files/stacks-image-d2c4351-164x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5cpdWgCZk7HV
+								ROwHuQNbEg==
+								</data>
+								<key>Size</key>
+								<integer>29154</integer>
+							</dict>
 							<key>files/stacks-image-d2c4351-196x300.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5925,16 +5975,6 @@
 								</data>
 								<key>Size</key>
 								<integer>40489</integer>
-							</dict>
-							<key>files/stacks-image-d2c4351.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								Ta+0t2pCcZ7e
-								8p223PFhUw==
-								</data>
-								<key>Size</key>
-								<integer>41169</integer>
 							</dict>
 							<key>files/stacks-image-f9ee1d8-166x250.jpg</key>
 							<dict>
@@ -5960,18 +6000,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OlsGq0xHJ9aF
-								dnzOgAI8rg==
+								D2Ys6nFQJu+s
+								aiuA7zpEVA==
 								</data>
 								<key>Size</key>
-								<integer>107445</integer>
+								<integer>116303</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								iQVvqRQvmB2a
-								/n0OjmZWWQ==
+								TkvUPAvI5VEv
+								cuxJElMkeg==
 								</data>
 								<key>Size</key>
 								<integer>27425</integer>
@@ -5980,8 +6020,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g6ZIGd1USh7F
-								d4M6suanNA==
+								J+lfBncvUhId
+								Khwk+bAhBQ==
 								</data>
 								<key>Size</key>
 								<integer>922</integer>
@@ -5990,11 +6030,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZvJ6XNz3aQpB
-								xIp9ZuDjfA==
+								ChlGPDoWNE4r
+								rDh78XMXeA==
 								</data>
 								<key>Size</key>
-								<integer>47080</integer>
+								<integer>52995</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
