--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-31T19:52:47Z</date>
+						<date>2018-06-09T12:23:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -98,6 +98,26 @@
 								<key>Size</key>
 								<integer>307683</integer>
 							</dict>
+							<key>files/stacks-image-248de64-1200x776.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9bJ5af31ToLq
+								s071AM1Pvg==
+								</data>
+								<key>Size</key>
+								<integer>297644</integer>
+							</dict>
+							<key>files/stacks-image-69ebcea.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wcQWJYoOe1An
+								41Iye9rWOQ==
+								</data>
+								<key>Size</key>
+								<integer>146527</integer>
+							</dict>
 							<key>files/stacks-image-902084e-166x250.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -128,6 +148,16 @@
 								<key>Size</key>
 								<integer>228758</integer>
 							</dict>
+							<key>files/stacks-image-d2c4351-164x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5cpdWgCZk7HV
+								ROwHuQNbEg==
+								</data>
+								<key>Size</key>
+								<integer>29154</integer>
+							</dict>
 							<key>files/stacks-image-d2c4351-196x300.png</key>
 							<dict>
 								<key>Digest</key>
@@ -137,16 +167,6 @@
 								</data>
 								<key>Size</key>
 								<integer>40489</integer>
-							</dict>
-							<key>files/stacks-image-d2c4351.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								Ta+0t2pCcZ7e
-								8p223PFhUw==
-								</data>
-								<key>Size</key>
-								<integer>41169</integer>
 							</dict>
 							<key>files/stacks-image-f9ee1d8-166x250.jpg</key>
 							<dict>
@@ -172,18 +192,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OlsGq0xHJ9aF
-								dnzOgAI8rg==
+								D2Ys6nFQJu+s
+								aiuA7zpEVA==
 								</data>
 								<key>Size</key>
-								<integer>107445</integer>
+								<integer>116303</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								iQVvqRQvmB2a
-								/n0OjmZWWQ==
+								TkvUPAvI5VEv
+								cuxJElMkeg==
 								</data>
 								<key>Size</key>
 								<integer>27425</integer>
@@ -192,8 +212,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g6ZIGd1USh7F
-								d4M6suanNA==
+								J+lfBncvUhId
+								Khwk+bAhBQ==
 								</data>
 								<key>Size</key>
 								<integer>922</integer>
@@ -202,11 +222,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZvJ6XNz3aQpB
-								xIp9ZuDjfA==
+								ChlGPDoWNE4r
+								rDh78XMXeA==
 								</data>
 								<key>Size</key>
-								<integer>47080</integer>
+								<integer>52995</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
