--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/ChildPages/1-NetSci-2019-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-NetSci-2019/ChildPages/1-NetSci-2019-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-29T17:56:10Z</date>
+						<date>2018-06-09T12:23:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -67,6 +67,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-248de64-1200x776.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9bJ5af31ToLq
+								s071AM1Pvg==
+								</data>
+								<key>Size</key>
+								<integer>297644</integer>
+							</dict>
+							<key>files/stacks-image-3bd846c-1200x636.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7Tdr9WgJR/uS
+								BovdBArFyQ==
+								</data>
+								<key>Size</key>
+								<integer>295684</integer>
 							</dict>
 							<key>files/stacks-image-62d32bc-962x550.jpg</key>
 							<dict>
@@ -102,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Prgd+clsHiw8
-								IkjDm3J0zQ==
+								59pE3w5u2ElZ
+								tEIr5Vjefg==
 								</data>
 								<key>Size</key>
-								<integer>111501</integer>
+								<integer>112675</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -132,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+DgQKb64G4Qj
-								kkdFSWHYNg==
+								7oSR5nfNkjqs
+								wwak+JNE1g==
 								</data>
 								<key>Size</key>
-								<integer>49487</integer>
+								<integer>54937</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
