location and maps netsci bold
location and maps netsci bold

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6757,7 +6757,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T12:51:55Z</date>
+						<date>2018-06-09T13:03:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7796,11 +7796,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4L5Y709SydlJ
-								3rVEat3+Ng==
+								F5WvA2MwROmd
+								Qga+VNTfCw==
 								</data>
 								<key>Size</key>
-								<integer>2083</integer>
+								<integer>1995</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
