--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:18:59Z</date>
+						<date>2018-06-09T18:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110128.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								QETP738VfUvU
-								/jzCm7P3tw==
-								</data>
-								<key>Size</key>
-								<integer>41544</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -124,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F38jj6SntRoe
-								k5Q9Q9ZdcQ==
+								fkHi73oQTIzG
+								WN1QDt8P3A==
 								</data>
 								<key>Size</key>
-								<integer>110821</integer>
+								<integer>110644</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -144,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2Yb8KZmEw0oX
-								hQ1lp2RUZw==
+								k/o2B0zhghET
+								G7Vb6Pvzfg==
 								</data>
 								<key>Size</key>
-								<integer>49378</integer>
+								<integer>49231</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
