--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:18:59Z</date>
+						<date>2018-06-09T18:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110128.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								QETP738VfUvU
-								/jzCm7P3tw==
-								</data>
-								<key>Size</key>
-								<integer>41544</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -84,11 +74,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qdq97gfqAj3c
-								SDyo7jFbyg==
+								4rmLr4+T5OOK
+								NvwDFax4fg==
 								</data>
 								<key>Size</key>
-								<integer>98480</integer>
+								<integer>98303</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -104,8 +94,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t8V4+utq8bDS
-								NwSL+oDYLA==
+								GD5T5OYfxGr9
+								FPRK2qV/Wg==
 								</data>
 								<key>Size</key>
 								<integer>37811</integer>
