--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:20:48Z</date>
+						<date>2018-06-09T18:58:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110128.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								QETP738VfUvU
-								/jzCm7P3tw==
-								</data>
-								<key>Size</key>
-								<integer>41544</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -94,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								S52H44i+F9v5
-								L6OZApmSSQ==
+								YWC9nwKlIv9g
+								Oz2c1G3ZSg==
 								</data>
 								<key>Size</key>
-								<integer>92085</integer>
+								<integer>91908</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
