--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-09T18:20:48Z</date>
+						<date>2018-06-09T19:01:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110128.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								QETP738VfUvU
-								/jzCm7P3tw==
-								</data>
-								<key>Size</key>
-								<integer>41544</integer>
-							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
 								<key>Digest</key>
@@ -84,11 +74,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+/g4ioIMOjgz
-								KI3z+kvf8Q==
+								AiRwO5Jv+B0j
+								4ZNRCZ70mQ==
 								</data>
 								<key>Size</key>
-								<integer>90213</integer>
+								<integer>88862</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
@@ -104,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cPUdmbs2FRNA
-								KNgExARNSg==
+								cx9YvEa6KH2A
+								F+RAzbkf4w==
 								</data>
 								<key>Size</key>
-								<integer>32213</integer>
+								<integer>31488</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
